# loc

./: .env.example  .gitignore  LICENSE  Makefile  SKILL.md  docker-compose.prod.yml  docker-compose.yml  railway.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_infra4_correct_models.py  002_exp4_fts_search.py  003_r3_pgvector_embeddings.py  004_global_country_field.py  005_disc4_experience_duration.py  006_exp5_referral_clicks.py
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: blog.py  contact.py  experiences.py  leads.py  products.py  properties.py  referrals.py
backend/app/core/: deps.py  embeddings.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  blog_post.py  experience.py  inquiry.py  product.py  property.py  referral_click.py
backend/app/repositories/: __init__.py  base.py  blog_post.py  experience.py  inquiry.py  product.py  property.py  referral_click.py
backend/app/schemas/: __init__.py  blog_post.py  contact.py  experience.py  product.py  property.py
backend/app/services/: __init__.py  blog_post.py  contact.py  experience.py  product.py  property.py
backend/scripts/: local_setup.py  seed.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_experiences.py  test_properties.py
docs/: ARCHITECTURE.md  SEARCH_STRATEGY.md  USER_STORIES.md  WORKFLOW.md
frontend/: .fallowrc.json  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
nginx/: loc.conf
(+77 files in other folders)
